# -EDD-PROYECTOS_202100215

./: README.md
Fase#1/: CMakeLists.txt  main.cpp
Fase#1/Archivos Carga/: Publicaciones.json  Solicitudes.json  Usuarios.json
Fase#1/Documentación/: ~$nual Tecnico Fase#1 poryecto EDD Angel Pérez.docx  ~$nual de Usuario Fase#1 poryecto EDD Angel Pérez.docx  ~WRL1527.tmp
Fase#1/Headers/: CargaSolicitudes.h  CargaUsuarios.h  CargarPublicaciones.h  InicioSeccion.h  ListaCircular.h  ListaDoblePublicaciones.h  ListaEnlazada.h  ListaEnlazadaRechazo.h  ListaSolicitud.h  MatrizDispersa.h  MenuAdmin.h  MenuPublicaciones.h  MenuReportes.h  MenuReportesUsuario.h  MenuSolicitud.h  MenuUsuario.h  NodoMatriz.h  NodoPila.h  Perfil.h  Pila.h  Publicacion.h  Registro.h  Solicitud.h  Usuarios.h
Fase#1/Logica/: CargaSolicitudes.cpp  CargaUsuarios.cpp  CargarPublicaciones.cpp  InicioSeccion.cpp  ListaCircular.cpp  ListaDoblePublicaciones.cpp  ListaEnlazada.cpp  ListaEnlazadaRechazo.cpp  ListaSolicitud.cpp  MatrizDispersa.cpp  MenuAdmin.cpp  MenuPublicaciones.cpp  MenuReportes.cpp  MenuReportesUsuario.cpp  MenuSolicitud.cpp  MenuUsuario.cpp  NodoPila.cpp  NodoPublicacion.cpp  Perfil.cpp  Pila.cpp  Registro.cpp  Solicitud.cpp  Usuarios.cpp
Fase_2/: CMakeLists.txt  admin.cpp  admin.h  admin.ui  amistad.cpp  amistad.h  amistades.cpp  amistades.h  arbolavl.cpp  arbolavl.h  arbolb.cpp  arbolb.h  arbolbinariocompleto.cpp  arbolbinariocompleto.h  cargamasivapublicaciones.cpp  cargamasivapublicaciones.h  cargamasivasolicitudes.cpp  cargamasivasolicitudes.h  cargamasivausuarios.cpp  cargamasivausuarios.h  feed.cpp  feed.h  feed.ui  grafo.cpp  grafo.h  listadoble.cpp  listadoble.h  listaenviados.cpp  listaenviados.h  listarelaciones.cpp  listarelaciones.h  main.cpp  mainview.cpp  mainview.h  mainview.ui  matriz.cpp  matriz.h  nodob.cpp  nodob.h  nodobinariocompleto.cpp  (+16 more)
Fase_2/Documentación/: Manual Tecnico Fase#1 poryecto EDD Angel Pérez.docx  (+1 more)
